--- a/app/src/main/res/layout/list_photos.xml
+++ b/app/src/main/res/layout/list_photos.xml
@@ -9,7 +9,7 @@
     <ImageView
         android:id="@+id/photoIV"
         android:layout_width="125dp"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:layout_gravity="start"/>
 
     <TextView
