--- a/app/src/main/res/layout/list_photos.xml
+++ b/app/src/main/res/layout/list_photos.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="125dp"
-    android:orientation="horizontal">
+    android:orientation="horizontal"
+    android:layout_margin="3dp">
 
     <ImageView
         android:id="@+id/photoIV"
